fixed user avatar size fixed styles on forms added picture jumping on home page

--- a/src/sass/form.scss
+++ b/src/sass/form.scss
@@ -3,7 +3,7 @@
 }
 
 .add.form {
-  .input input, .text textarea {
+  .ui.input input, .text textarea {
     border: none;
     padding-left: 0px;
   }
